--- a/app/views/wiki/rollback.rhtml
+++ b/app/views/wiki/rollback.rhtml
@@ -6,29 +6,31 @@
 
 <%= "<p style='color:red'>Please correct the error that caused this error in rendering:<br/><small>#{@params["msg"]}</small></p>" if @params["msg"] %>
 
-<%= form_tag({:web => @web.address, :action => 'save', :id => @page.name},
-      { :id => 'editForm', :method => 'post', :onSubmit => 'cleanAuthorName();', 
-        'accept-charset' => 'utf-8' })
-%>
-<p>
-  <textarea name="content" style="font-size: 12px; width: 450px; height: 500px"><%= @revision.content %></textarea>
-</p>
-<p>
-    <input type="submit" value="Update" accesskey="u" /> as 
-    <input type="text" name="author" id="authorName" value="<%= @author %>" 
-        onClick="this.value == 'AnonymousCoward' ? this.value = '' : true" />
-    | 
-    <% link_to('Cancel', 
-         {:web => @web.address, :action => 'cancel_edit', :id => @page.name},
-         {:accesskey => 'c'})
-    %>
-    <small>(unlocks page)</small>
-</p>
-<%= end_form_tag %>
+<div id="MarkupHelp">
+  <%= render("#{@web.markup}_help") %>
+  <%= render 'wiki_words_help' %>
+</div>
 
-<%= render("#{@web.markup}_help") if @web %>
+<div id="editForm">
+	<%= form_tag({:web => @web.address, :action => 'save', :id => @page.name},
+	      { :id => 'editForm', :method => 'post', :onSubmit => 'cleanAuthorName();', 
+	        'accept-charset' => 'utf-8' }) %>
+        <textarea name="content" id="content"><%= @revision.content %></textarea>
+		<div id="editFormButtons">
+	        <input type="submit" value="Update" accesskey="u" /> as 
+		    <input type="text" name="author" id="authorName" value="<%= @author %>" 
+		        onClick="this.value == 'AnonymousCoward' ? this.value = '' : true" />
+		    | 
+			<span>
+				<%= link_to('Cancel', {:web => @web.address, :action => 'cancel_edit', :id => @page.name},
+				      {:accesskey => 'c'}) %> 
+                <small>(unlocks page)</small>
+			</span>
+	    </div>
+	<%= end_form_tag %>
+</div>
 
-<script language="JavaScript1.2">
+<script type="text/javascript">
 function cleanAuthorName() {
   if (document.getElementById('authorName').value == "") {
     document.getElementById('authorName').value = 'AnonymousCoward';
