anothr CSS tweak (size of the currently selected item in the navigation menu)
git-svn-id: http://instiki.rubyforge.org/svn/instiki/trunk@468 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/public/stylesheets/instiki.css
+++ b/public/stylesheets/instiki.css
@@ -35,7 +35,7 @@ form#navigationSearchForm input { font-size: 80%; }
 .navigation a { color: #000; font-weight: bold; }
 .navigation small a { font-weight: normal; font-size: 90%; }
 
-.navOn { font-size: 11px; color: #444; font-weight: bold; text-decoration: none; }
+.navOn { color: #444; font-weight: bold; text-decoration: none; }
 
 div.help { font-family: verdana, arial, helvetica, sans-serif; font-size: 70%; }
 
