--- a/app/views/wiki/search.rhtml
+++ b/app/views/wiki/search.rhtml
@@ -1,4 +1,4 @@
-<% @title = "Search results for \"#{@params["query"]}\"" %>
+<% @title = "Search results for \"#{h @params["query"]}\"" %>
 
 <% unless @title_results.empty? %>
 <h2><%= @title_results.length %> page(s) containing search string in the page name:</h2>
@@ -24,7 +24,7 @@
 <% end %>
 
 <% if (@results + @title_results).empty? %>
-  <h2>No pages contain "<%= @params["query"] %>" </h2>
+  <h2>No pages contain "<%= h @params["query"] %>" </h2>
   <p>
     Perhaps you should try expanding your query. Remember that Instiki searches for entire 
     phrases, so if you search for "all that jazz" it will not match pages that contain these 
