--- a/app/views/wiki_words_help.rhtml
+++ b/app/views/wiki_words_help.rhtml
@@ -1,3 +1,4 @@
+<div style="width:254px;">
 <h3>Wiki words</h3>
 <p style="border-top: 1px dotted #ccc; margin-top: 0px">
   Two or more uppercase words stuck together (camel case) or any phrase surrounded by double 
@@ -7,3 +8,4 @@
   Wiki words: <i>HomePage, ThreeWordsTogether, [[C++]], [[Let's play again!]]</i><br/>
   Not wiki words: <i>IBM, School</i>
 </p>
+</div>
