--- a/public/stylesheets/instiki.css
+++ b/public/stylesheets/instiki.css
@@ -139,6 +139,17 @@ margin:0 0 1.5em;
 padding:0 2.5em;
 }
 
+
+/* Affects the display of "category: ..." */
+.property { 
+color: #999; 
+font-size: 80%; 
+}
+
+.hidden { 
+display: none;
+}
+
 pre {
 background-color:#DDD;
 font-size:90%;
@@ -237,19 +248,23 @@ div#editFormButtons span {
 white-space:nowrap;
 }
 
+div#editForm {
+float:left;
+width:65%;
+}
+
 div#editForm textarea#content {
 height:400px;
-width:70%;
+width:97%;
 }
 
 div#MarkupHelp {
 float:right;
-margin-top:0.5em;
-width:25%;
+width:34%;
 }
 
 div#MarkupHelp table {
-border-bottom:3px solid #BBB;
+border:3px solid #BBB;
 border-left:3px solid #999;
 border-right:3px solid #BBB;
 border-top:3px solid #999;
@@ -272,7 +287,7 @@ padding:0 0.75em;
 }
 
 div#MarkupHelp h3 {
-font-size:90%;
+font-size:100%;
 font-weight:bold;
 margin:0 0 5px;
 padding:5px 0 0;
@@ -317,4 +332,12 @@ div.errorExplanation p,div.errorExplanation li {
 border:none;
 margin:0;
 padding:0;
+}
+
+.disableAutoComplete {
+display: none; 
+margin-top: 10px; 
+margin-bottom: 5px; 
+width: 99%; 
+height: 200px	
 }
