in response to #406 - commented out parts in the css that would render the admin part ununsable. still needs research.
git-svn-id: http://instiki.rubyforge.org/svn/instiki/trunk@518 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/public/stylesheets/instiki.css
+++ b/public/stylesheets/instiki.css
@@ -334,10 +334,10 @@ margin:0;
 padding:0;
 }
 
-.disableAutoComplete {
+/* .disableAutoComplete {
 display: none; 
 margin-top: 10px; 
 margin-bottom: 5px; 
 width: 99%; 
 height: 200px	
-}
+} */
