--- a/app/views/admin/create_web.rhtml
+++ b/app/views/admin/create_web.rhtml
@@ -5,10 +5,10 @@
   so different subjects or projects can write about different <i>MuppetShows</i>.
 </p>
 
-<%= form_tag({ :controller => 'admin', :action => 'create_web' },
+<% form_tag({ :controller => 'admin', :action => 'create_web' },
              { 'id' => 'setup', 'method' => 'post', 
                'onSubmit' => 'cleanAddress(); return validateSetup()',
-               'accept-charset' => 'utf-8' })
+               'accept-charset' => 'utf-8' }) do
 %>
 
 <ol class="setup">
@@ -38,7 +38,7 @@
   </small>
 </p>
 
-<%= end_form_tag %>
+<% end %>
 
 <script>
 function proposeAddress() {
