--- a/app/views/navigation.rhtml
+++ b/app/views/navigation.rhtml
@@ -16,12 +16,12 @@ end
     <%= list_item 'Authors', {:action => 'authors'}, 'Who wrote what' %> | 
     <%= list_item 'Feeds', {:action => 'feeds'}, 'Subscribe to changes by RSS' %> | 
     <%= list_item 'Export', {:action => 'export'}, 'Download a zip with all the pages in this wiki', 'X' %> |
-    <%= form_tag({ :controller => 'wiki', :action => 'search', :web => @web.address},
-                 {'id' => 'navigationSearchForm', 'method' => 'get', 'accept-charset' => 'utf-8' }) %>
+    <% form_tag({ :controller => 'wiki', :action => 'search', :web => @web.address},
+                 {'id' => 'navigationSearchForm', 'method' => 'get', 'accept-charset' => 'utf-8' }) do %>
       <input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" />
-    <%= end_form_tag %>
+    <% end %>
   <% else %>
   	<%= list_item 'Home Page', {:action => 'published', :id => 'HomePage'}, 'Home, Sweet Home', 'H' %> | 
   <% end%>
