--- a/app/views/wiki/new.rhtml
+++ b/app/views/wiki/new.rhtml
@@ -10,17 +10,17 @@
 </div>
 
 <div id="editForm">
-	<%= form_tag({ :action => 'save', :web => @web.address, :id => @page_name },
-	        { 'id' => 'editForm', 'method' => 'post', 'onSubmit' => 'cleanAuthorName();', 'accept-charset' => 'utf-8' }) %>
+	<% form_tag({ :action => 'save', :web => @web.address, :id => @page_name },
+	        { 'id' => 'editForm', 'method' => 'post', 'onSubmit' => 'cleanAuthorName();', 'accept-charset' => 'utf-8' }) do %>
 	<div class="hidden"><textarea name="content1" id="content1">iam empty</textarea></div>
-	    <textarea name="content" id="content"><%= h(@flash[:content] || '') %></textarea>
+	    <textarea name="content" id="content"><%= h(flash[:content] || '') %></textarea>
 		<div id="editFormButtons">
 		    <input type="submit" value="Submit" accesskey="s"/> as 
 		    <%= text_field_tag :author, @author, 
 		        :onfocus => "this.value == 'AnonymousCoward' ? this.value = '' : true;",
 		        :onblur  => "this.value == '' ? this.value = 'AnonymousCoward' : true" %> 
         </div>
-	<%= end_form_tag %>
+	<% end %>
 </div>
 
 <script type="text/javascript">
